cluster/apps/development/gitea/ssh-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitea-ssh-external
  annotations:
    metallb.io/address-pool: default-pool
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.1.237
  externalTrafficPolicy: Local
  ports:
    - name: ssh
      port: 22
      targetPort: 2222
      protocol: TCP
  selector:
    app.kubernetes.io/name: gitea
    app.kubernetes.io/instance: gitea
